--- a/css/form.css
+++ b/css/form.css
@@ -1,7 +1,7 @@
 input[type="text"], input[type="email"], input[type="number"], input[type="tel"], input[type="password"], input[type="url"], input[type="search"], input[type="file"], textarea {height:42px; padding:0 15px; background-color:#fff; border:1px solid #e8e5e2; border-radius:0; -webkit-appearance:none; -moz-appearance:none; -ms-appearance:none; -o-appearance:none;}
 
 label.input, label.select {position:relative; display:block; flex:1;}
-label.input i {color:#aaa; font-size:16px; font-style:normal; line-height:18px; position:absolute; top:11px; left:15px;}/* placeholder */
+label.input i {color:#aaa; font-size:16px; font-style:normal; line-height:18px; white-space:nowrap; text-overflow:ellipsis; overflow:hidden; position:absolute; top:11px; right:0; left:15px;}/* placeholder */
 label.input input[type='text'], label.input input[type='password'], label.input input[type='number'] {width:100%; font-size:16px; font-family:'MyLotte'; line-height:18px;}
 label.input > em {margin-top:5px; color:#ff7200; font-size:12px; font-family:'Noto Sans'; line-height:18px; display:none;}
 label.input.err > em {display:block;}
@@ -18,11 +18,31 @@ label.input button.icon_pss {background-image:url('../images/common/icon_pass_hi
 
 .label_wrap + .label_wrap {margin-top:10px;}
 
+.check_group {margin-top:-20px; margin-left:-20px;}
+.check_group .check {margin-top:20px; margin-left:20px;}
 
-/* input + button */
-label.input div {display:flex;}
-label.input div input {width:auto !important; margin-right:8px;}
-label.input div input + [class*='btn_'] {flex:0 auto !important;}
+.check {padding-left:20px; line-height:1; position:relative; display:inline-block;}
+.check > * {line-height:1.4; vertical-align:middle; display:inline-block;}
+.check input {margin:0 0 0 1px; border:0; position:absolute;}
+.check .label:before, .check .label:after {content:''; position:absolute; display:inline-block;}
+
+/* radio */
+.check input[type='radio'], .check input[type='radio'] + .label:before {width:16px; height:16px; background-color:#fff; border:1px solid #ccc; border-radius:50%; top:3px; left:0;}
+.check input[type='radio']:checked + .label:after {width:10px; height:10px; background-color:#333; border-radius:50%; top:6px; left:3px;}
+
+/* checkbox */
+.check input[type='checkbox'], .check input[type='checkbox'] + .label:before {width:16px; height:16px; background-color:#fff; border:1px solid #ccc; top:3px; left:0;}
+.check input[type='checkbox']:checked + .label:after {width:7px; height:12px; border:2px solid #333; border-top:0; border-left:0; top:3px; left:5px; -webkit-transform:rotate(45deg); transform:rotate(45deg);}
+
+.check input[type='radio'], .check input[type='checkbox'] {margin-left:0;}
+
+.check_ani {position:relative; display:inline-block;}
+.check_ani input {width:42px; height:22px; margin:0 0 0 1px; position:absolute;}
+.check_ani em {min-height:22px; padding-left:48px; position:relative; display:block;}
+.check_ani input[type='checkbox'] + em:after {width:18px; height:18px; background-color:#fff; border-radius:50%; content:''; position:absolute; top:50%; left:2px; z-index:1; display:block; transform:translateY(-50%); transition:all 0.2s;}
+.check_ani input[type='checkbox']:checked + em:before {background-color:#ff7200;}
+.check_ani em:before {width:42px; height:22px; background-color:#ccc; border:0; border-radius:60px; content:''; position:absolute; top:0; left:0; display:inline-block;}
+.check_ani input[type='checkbox']:checked + em:after {left:22px;}
 
 .select_form select{height:42px;}
 
