--- a/css/form.css
+++ b/css/form.css
@@ -44,7 +44,7 @@ label.input button.icon_pss {background-image:url('../images/common/icon_pass_hi
 .check_ani em:before {width:42px; height:22px; background-color:#ccc; border:0; border-radius:60px; content:''; position:absolute; top:0; left:0; display:inline-block;}
 .check_ani input[type='checkbox']:checked + em:after {left:22px;}
 
-.select_form select{height:42px;}
+.select_form select{height:42px; border:1px solid #e8e5e2;}
 
 .form_group > li + li {padding-top:20px;}
 .form_group .form_tit {margin-top:0; margin-bottom:6px; font-size:14px !important; font-family:'Noto Sans'; line-height:20px !important; text-align:left !important;}
