--- a/css/common.css
+++ b/css/common.css
@@ -21,6 +21,7 @@ header nav > ul > li {flex:1;}
 header nav > ul > li > a {padding:15px 0; text-align:center;}
 header nav a {display:block;}
 header nav ul ul {display:none;}
+/* header nav li:hover > ul, header nav li:focus-within > ul {display:block;} */
 
 /* Hamberger button */
 .hamber_btn {width:50px; height:50px; background-color:transparent; border:0; position:absolute; left:20px; top:20px; cursor:pointer; display:none;}
