--- a/include/header.html
+++ b/include/header.html
@@ -9,7 +9,7 @@
 <div class="gnb">
     <nav>
         <ul>
-            <li><a href="#none">Elements</a>
+            <li><a href="./">Elements</a>
                 <ul>
                     <li><a href="#none">Menu01-1</a></li>
                     <li><a href="#none">Menu01-2</a>
